--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,20 @@
   text-align: center;
 }
 
+body,
+html {
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  background-color: #D9D9D9;
+}
+
 .app-container {
   max-width: 1028px;
+  height: calc(100vh - 40px);
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 40px;
+  box-shadow: gray 0 0 20px;
 }
 
 .App-logo {
@@ -71,4 +79,30 @@ body {
     padding-top: 4em;
   }
 
+}
+
+
+/* colors */
+.blue-bg {
+  background-color: #96C5CF;
+}
+
+.rosa-bg {
+  background-color: #F4B9BA;
+}
+
+.peach-bg {
+  background-color: #F6E4DA;
+}
+
+.green-bg {
+  background-color: #C2DDD6;
+}
+
+.lila-bg {
+  background-color: #A7BEE1;
+}
+
+.yellow-bg {
+  background-color: #F8FDBF;
 }
