--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -2,20 +2,14 @@
 .home {
     text-align: center;
     background-color: lightgray;
-    height: calc(100vh - 80px);
-    /* Full viewport height minus the navbar height */
+    height: calc(100vh - 120px);
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    /* Center content vertically */
+    padding-top: 20px;
     align-items: center;
-    /* Center content horizontally */
     padding: 0;
-    /* Remove padding if not needed */
     margin: 0;
-    /* Remove margin to ensure full viewport usage */
     box-sizing: border-box;
-    /* Include padding and border in the element's total width and height */
 }
 
 .welcome {
@@ -27,35 +21,26 @@
 .button-row {
     display: flex;
     margin-bottom: 10px;
-    height: calc((100% - 40px) / 3);
-    /* Increased height for better visibility */
+    height: calc((100% - 10px) / 3.7);
     gap: 10px;
-    /* Space between buttons */
     justify-content: center;
-    /* Center buttons horizontally */
-    width: 100%;
+    /* width: 80%; */
 }
 
 .button-row .button-large {
     flex: 3;
     padding: 20px;
-    /* height: calc((100% - 40px) / 3); */
     font-size: 1.2rem;
-    /* Increase font size */
     border-radius: 5px;
-    /* Rounded corners for a better look */
     text-transform: uppercase;
     box-shadow: gray 0 0 20px;
 }
 
 .button-row .button-small {
     flex: 2;
-    /* height: calc((100% - 40px) / 3); */
     padding: 20px;
     font-size: 1rem;
-    /* Slightly smaller font size */
     border-radius: 5px;
-    /* Rounded corners for consistency */
     text-transform: uppercase;
     box-shadow: gray 0 0 20px;
 }
@@ -63,12 +48,8 @@
 .button-row button {
     width: 100%;
     border: none;
-    /* height: calc((100% - 40px) / 3); */
-    /* background-color: #333; */
-    /* color: white; */
     cursor: pointer;
     transition: background-color 0.3s ease;
-    /* Smooth background color transition */
 }
 
 .button-row button:hover {
@@ -88,27 +69,20 @@
     .button-row {
         align-items: center;
         gap: 0;
-        height: calc((100% - 40px) / 3);
-        /* Remove gap between buttons in vertical stack */
+        height: calc((100% - 40px) / 4);
     }
 
     .button-row .button-large,
     .button-row .button-small {
-        /* flex: none; */
         width: 100%;
         height: 100%;
-        margin-bottom: 10px;
-        /* Add space between stacked buttons */
+        /* margin-bottom: 10px; */
         padding: 15px;
-        /* Adjust padding for better appearance on small screens */
-        font-size: 1rem;
-        /* Adjust font size for better fit */
     }
 
     .button-row .button-large:last-child,
     .button-row .button-small:last-child {
-        margin-bottom: 0;
-        /* Remove bottom margin for the last button */
+        /* margin-bottom: 0; */
     }
 
     .button-container {
